--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 100dvh;
             background-color: #f4f4f4;
             color: #333;
             text-align: center;
